styles/leftAndright.scss
.left {

  width: 570px;
  height: 355px;
  background-color: #33FFBE;
  float: left;
}

.left .userInformation {

  margin-top: 80px;
  padding-bottom: 80px;
}

.left .whosOnline {

  margin-top: 80px;
  margin-bottom: 70px;
}

.right {

  width: 570px;
  height: 355px;
  background-color: #FF33F9;
  float: right;
}

.right .Game1 {


  margin-top: 80px;
  padding-bottom: 80px;
}

.right .Game2 {


  margin-top: 80px;
  margin-bottom: 70px;
}

